# tethys

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  out.txt  pkg.zyc  test.in  test.odin  test.pkg
amon/: allocators.odin
as/: CMakeLists.txt
as/include/as/: Err.h  Gen.h  Parse.h  Parse_Tree.h  Pos.h  Rng.h  Scan.h  Src.h  Tkn.h  Token_Listing.h
as/src/as/: Gen.cpp  Parse.cpp  Parse_Tree.cpp  Scan.cpp  Src.cpp
ffi/: CMakeLists.txt
ffi/include/ffi/: FFI.h
ffi/src/ffi/: FFI.cpp
ffi/src/ffi/win64/: call.asm
ir/: CMakeLists.txt
ir/include/ir/: Bag.h  Basic_Block.h  Handles.h  Ins.h  Pkg.h  Proc.h  Type.h  Value.h
ir/src/ir/: Pkg.cpp  Proc.cpp  Type.cpp  Value.cpp
playground/: CMakeLists.txt  main.cpp
tas/: CMakeLists.txt  main.cpp
unittest/: CMakeLists.txt  unittest_tas.cpp
unittest/test/parse/: c_proc.out  c_proc_extra_comma.in  constant_debugstr.in  constant_debugstr.out  imm_arithmetic.in  imm_arithmetic.out  imm_explicit_cmp.in  imm_explicit_cmp.out  imm_jump.in  imm_jump.out  simple_add.out  simple_arithmetic.out  simple_jump.in  simple_jump.out  simple_mem_read_write.in  simple_mem_read_write.out
unittest/test/scan/: c_proc.in  c_proc.out  constant_string.in  constant_string.out  simple_add.in  simple_add.out  simple_arithmetic.in  simple_arithmetic.out  simple_jump.out
vm/: CMakeLists.txt
vm/include/vm/: Asm.h  C.h  Core.h  Op.h  Pkg.h  Reg.h  Util.h
vm/src/vm/: C.cpp  Core.cpp  Pkg.cpp
zas/: parse.odin  parse_tree.odin  scan.odin  src.odin  test.odin  token_listing.odin
zas-cli/: main.odin
zas/test/: main.odin
zdbg/: CMakeLists.txt
zdbg/UI/: Theme.qml  TopBarButton.qml  UI.qrc  qmldir
zdbg/fonts/: fonts.qrc
zdbg/include/zdbg/: Driver.h
zdbg/qml/: main.qml
zdbg/src/zdbg/: Driver.cpp  main.cpp
zvm/: c.odin  core.odin  pkg.odin
